// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`composition hook should return with Set props 1`] = `
Object {
  "className": "css-ey6lii css-63it0p css-jwhr8m bb-Box bb-Set",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 test bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for isFilled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for orientation="vertical" 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.child.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides Set.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

.emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a vertical breakpoint 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:1023px) {
  .emotion-4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media screen and (min-width:1024px) {
  .emotion-4 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin-left: -0.5rem;
    margin-top: -0.5rem;
  }
}

@media screen and (max-width:1023px) {
  .emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media screen and (min-width:1024px) {
  .emotion-4.emotion-4.emotion-4 > * {
    margin-left: 0.5rem;
    margin-top: 0.5rem;
  }
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a vertical filled set 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a vertical set 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4.emotion-4.emotion-4 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of center 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of left 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignX of right 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of bottom 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of center 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for an alignY of top 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-6 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-4 emotion-0 emotion-6 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.child.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;

exports[`theming Set.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-4.emotion-4.emotion-4 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="emotion-4 emotion-0 emotion-1 bb-Box bb-Set"
>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 bb-Box"
  >
    world
  </div>
</div>
`;
